--- a/index.html
+++ b/index.html
@@ -15,42 +15,10 @@
       </header>
       <section class="programmes-container">
         <div class="loader"></div>
-        <!-- <article class="programme">
-          <h3 class="programme__title subheading">Антикризисное управление</h3>
-          <div class="module">
-            <div class="module__toggle"></div>
-            <h2 class="module__number list-heading">1 модуль</h2>
-            <ul class="module__list list">
-              <li class="module__list-item">Маркетинговые стратегии антикризисного менеджмента
-              </li>
-              <li class="module__list-item">Антикризисное управление предприятиями: реструктуризация,
-                банкротство, слияние и поглощение
-              </li>
-              <li class="module__list-item">Правовые основы антикризисного управления
-              </li>
-              <li class="module__list-item">Проектный менеджмент в антикризисном управлении
-              </li>
-              <li class="module__list-item">Финансово-экономические инструменты антикризисного управления
-              </li>
-            </ul>
-          </div>
-          <div class="module">
-            <div class="module__toggle"></div>
-            <h2 class="module__number list-heading">2 модуль</h2>
-            <ul class="module__list list">
-              <li class="module__list-item">Формирование и развитие компетенций в антикризисном управлении
-              </li>
-              <li class="module__list-item">Анализ и диагностика кризисных угроз в управлении
-              </li>
-              <li class="module__list-item">Инструменты антикризисного менеджмента
-              </li>
-              <li class="module__list-item">Механизмы антикризисного управления бизнесом
-              </li>
-              <li class="module__list-item">Антикризисный консалтинг</li>
-            </ul>
-          </div>
-        </article> -->
-        
+        <div class="error-container">
+          <p class="error-message">Что-то пошло не так... Пожалуйста попробуйте повторить попытку позднее.</p>
+          <button class="error-container__button">ОК</button>
+        </div>
       </section>
       <section class="features-block-container">
         <article class="features-block red-block">
